:lipstick: Fix layout and set to dark mode

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,26 +1,99 @@
 body {
-    height: 100%;
-    
-    main {
-        height: 100%;
-    
-        .content {
-            height: 75%;
-            top: 0;
-        }
-    
-        .console {
-            height: 25%;
-            bottom: 0;
+  height: 100vh;
+  margin: 0;
 
-            .outputerr {
-                color: #ff5a5a;
-            }
+  #main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 
-            .output {
-                color: black;
-            }
+  #main.dark {
+    --main-bgcolor: #333;
+    --main-color: #ccc;
+    --header-bgcolor: #222;
+    --header-color: rgba(255, 255, 255, 0.6);
+    --footer-bgcolor: #222;
+    --border-color: #555;
+    --warn-bgcolor: rgba(255, 153, 0, 0.3);
+    --error-bgcolor: rgba(255, 0, 0, 0.3);
+    --header-button-bgcolor: rgba(255, 255, 255, 0.15);
+    --header-button-border-color: rgba(255, 255, 255, 0.15);
+    --header-button-color: #ccc;
+    --dialog-bgcolor: #444;
+    --dialog-color: #ddd;
+
+    --output-error-colour: #f66;
+    --output-stdout-colour: #eee;
+
+    color: var(--main-color);
+    background-color: var(--main-bgcolor);
+  }
+
+  header {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 55px;
+
+    .menu {
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      .title {
+        font-family: "Courier New", Courier, monospace;
+        margin: 0 15px;
+      }
+
+      .menuButton {
+        min-width: 6em;
+        font-size: 14px;
+        background: var(--header-button-bgcolor);
+        color: var(--header-button-color);
+        border: 1px solid var(--header-button-border-color);
+        border-radius: 3px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+        margin: 0 0.5em;
+        padding: 0.3em 1em;
+
+        .cmd {
+          opacity: 0.4;
+          font-size: 90%;
+          margin: 0 0 0 5px;
         }
+      }
+    }
+  }
+
+  main {
+    position: absolute;
+    top: 55px;
+    bottom: 0;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+    .content {
+      top: 0;
+      flex: 3;
     }
 
+    .console {
+      bottom: 0;
+      flex: 1;
+      overflow: auto;
+
+      .outputerr {
+        color: var(--output-error-colour);
+      }
+
+      .output {
+        color: var(--output-stdout-colour);
+      }
+    }
+  }
 }
